# gappyfpca

./: .gitignore  CODEOWNERS  LICENSE  README.md  get_started.ipynb  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci-gappyfpca.yml
gappyfpca/: data_check.py  eig.py  fpca.py  nancov.py  weights.py
tests/: test_all.py  test_integration.py  test_unit.py
