[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta"

[project]
name = "gappyfpca"
description = "A simple package for PCA of gappy (incomplete) functions"
version = "0.0.1"
readme = "README.md"
authors = [
  { name="Amy Hodgkin", email="ahodgkin@turing.ac.uk" }
]
license = { file = "LICENSE" }
requires-python=">=3.8"
dependencies = [
            "numpy~=1.26.0",
            "scipy~=1.14.0",
            "notebook==7.2.2",
            "matplotlib==3.9.2",
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/amyhodgkin/gappyfpca"
Repository = "https://github.com/amyhodgkin/gappyfpca"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
extend-exclude = ["*.ipynb", "tests/*"]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
ignore = [
  "F821", # Undefined name
  "B019", # Use of `functools.lru_cache` or `functools.cache` on methods can lead to memory leaks
  "PD901", # Avoid using the generic variable name `df` for DataFrames
  "ISC001", # clashes with formatter
  "ANN101", # Missing type annotation for `self`
  "RUF100", # Unused `noqa` directive. (Does not work for multiple on one line)
]
select = [
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "UP", # pyupgrade
  "B", # flake8-bugbear
  "SIM", # flake8-simplify
  "PD", # pandas-vet
  "W", # pycodestyle
  "ANN", # flake8-annotations
  "ASYNC", #flake8-async
  "A", # flake8-builtins
  "C4", # flake8-comprehensions
  "ISC", # flake8-implicit-str-concat
  "ICN", # flake8-import-conventions
  "PT", # flake8-pytest-style
  "RET", # flake8-return
  "ARG", # flake8-unused-arguments
  "PD", # pandas-vet
  "R", # refactor
  "W", # warnings
  "PERF", #perflint
  "RUF", # ruff
]

[tool.ruff.lint.per-file-ignores]
# ignores for the test files explicitly
"tests/*" = [
  "E712", # Avoid equality comparisons to `True`; use `if received:` for truth
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.flake8-annotations]
suppress-none-returning = true